<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_topbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            app:title="@string/settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/settings_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/settings_version"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/settings_appearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SettingsOpenAppereance"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            app:layout_constraintTop_toBottomOf="@+id/settings_topbar"
            tools:layout_editor_absoluteX="0dp">
            <ImageView
                android:id="@+id/settings_appearance_icon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center_vertical"
                android:paddingTop="8dp"
                android:src="@drawable/settings_appearance" />
            <TextView
                android:id="@+id/settings_appearance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4sp"
                android:paddingTop="8dp"
                android:text="@string/settings_appearance"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/settings_playback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="SettingsOpenAppereance"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            app:layout_constraintTop_toBottomOf="@+id/settings_appearance"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/settings_playback_icon"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center_vertical"

                android:paddingTop="8dp"
                android:src="@drawable/nowplaying_play" />

            <TextView
                android:id="@+id/settings_playback_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4sp"
                android:paddingTop="8dp"
                android:text="@string/settings_playback"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>